<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView_title_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/informacion_basica"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
    />
    <TextView
        android:id="@+id/textView_nombre_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nombre"
        android:textSize="20sp"
        android:textColor="@color/black"
    />
    <TextView
        android:id="@+id/textView_edad_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edad"
        android:textSize="20sp"
        android:textColor="@color/black"
    />
    <TextView
        android:id="@+id/textView_correo_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/correo"
        android:textSize="20sp"
        android:textColor="@color/black"
    />
    <Button
        android:id="@+id/button_regresar_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/regresar"
        android:textColor="@color/white">

    </Button>

</LinearLayout>