<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/you_are_welcome"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
    />
    <EditText
        android:id="@+id/editText_name_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/ingresa_tu_nombre"
        android:gravity="center"
        android:ems="10"
        tools:ignore="Autofill"
    />
    <EditText
        android:id="@+id/editText_years_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/ingresa_tu_edad"
        android:gravity="center"
        android:ems="10"
        tools:ignore="Autofill"
    />
    <EditText
        android:id="@+id/editText_email_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:inputType="textEmailAddress"
        android:hint="@string/ingresa_tu_correo"
        android:gravity="center"
        android:ems="10"
        tools:ignore="Autofill"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/button_aceptar_main"
            android:text="@string/aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
        />

        <Button
            android:id="@+id/button_salir_main"
            android:text="@string/salir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />

    </LinearLayout>


</LinearLayout>